--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -324,7 +324,7 @@ Media Queries
 
 .bio {
   z-index: 2;
-  background: url("/src/assets/images/grey-bg.png");
+  background: url("../images/grey-bg.png");
   padding: 70px 0;
   width: 100%;
   display: flex;
@@ -361,7 +361,7 @@ Media Queries
 }
 .contact {
   position: relative;
-  background: url("/src/assets/images/grey-bg.png");
+  background: url("../images/grey-bg.png");
   z-index: 5;
   width: 100%;
   min-height: 100vh;
@@ -418,7 +418,7 @@ Media Queries
 }
 .experience {
   z-index: 4;
-  background: url("/src/assets/images/grey-bg.png");
+  background: url("../images/grey-bg.png");
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
