--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -25,7 +25,7 @@
   position: absolute;
   left: $spacing*4;
   top: $spacing*2;
-  // transition: all .5s cubic-bezier(.55,.055,.675,.19);
+  transition: all .5s cubic-bezier(.55,.055,.675,.19);
   z-index: 4;
   font-size: 2rem;
   font-weight: 600;
@@ -64,7 +64,7 @@
     right: 8px;
     box-shadow: 0px 0px 20px 0 rgba(30,30,30,0.3);
     transform: scale(1);
-    // transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
+    transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
   }
 }   
 
@@ -91,7 +91,7 @@
       left: 0;
       right: 0;
       top: 50%;
-      // transition: width .3s cubic-bezier(.68,0,.33,1) .1s,border-color .5s cubic-bezier(.55,.055,.675,.19);
+      transition: width .3s cubic-bezier(.68,0,.33,1) .1s,border-color .5s cubic-bezier(.55,.055,.675,.19);
     }
     
     &:hover{
@@ -135,7 +135,7 @@
         left: 8px;
         box-shadow: 0px 0px 20px 0 rgba(30,30,30,0.3);
         transform: scale(1);
-        // transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
+        transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
       }
     }
       
@@ -159,7 +159,7 @@
       top: 10vh;
       left: 0;
       z-index: 3;
-      // transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
+      transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
       
       &::before{
         content: unset;
@@ -174,7 +174,7 @@
       align-items: center;
       font-size: 2em;
       transform: scale(0);
-      // transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
+      transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
     }
       
     .nav-link a {
@@ -191,7 +191,7 @@
       align-items: center;
       font-size: 1.5em;
       transform: scale(0);
-      // transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
+      transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
     }
 
     .nav.open {
