--- a/src/assets/styles/sections/_contact.scss
+++ b/src/assets/styles/sections/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
   position: relative;
-  background: url('https://nicktruby.github.io/portfolio/src/assets/images/grey-bg.png');
+  background: url('../images/grey-bg.png');
   z-index: 5;
   width: 100%;
   min-height: 100vh;
