--- a/src/assets/styles/sections/_experience.scss
+++ b/src/assets/styles/sections/_experience.scss
@@ -1,6 +1,6 @@
 .experience {
   z-index: 4;
-  background: url('https://nicktruby.github.io/portfolio/src/assets/images/grey-bg.png');
+  background: url('../images/grey-bg.png');
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
