--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -17,20 +17,9 @@
 .nav-scrolled {
   color: #000000;
   background: #f4f4f4;
-
   box-shadow: 0 3px 20px rgba(black, 0.2);
 }
 
-.nav-initials span {
-  position: absolute;
-  left: $spacing*4;
-  top: $spacing*2;
-  transition: all .5s cubic-bezier(.55,.055,.675,.19);
-  z-index: 4;
-  font-size: 2rem;
-  font-weight: 600;
-  color: inherit;
-}
 .nav-initials{
   &::before{
     position: absolute;
@@ -42,6 +31,34 @@
     left: 19px;
     width: 60px;
     box-shadow: 0px 0px 20px 0 rgba(30,30,30,0.3);
+  }
+}
+
+.nav-initials span {
+  position: absolute;
+  left: $spacing*3;
+  top: $spacing;
+  transition: all .5s cubic-bezier(.55,.055,.675,.19);
+  z-index: 4;
+  font-size: 2rem;
+  font-weight: 600;
+  color: $text-light-high;
+  padding: $spacing;
+  
+  &::after {
+    content: '';
+    border-top: 0.15em solid $primary;
+    position: absolute;
+    margin: 0 auto;
+    width: 0;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transition: width .3s cubic-bezier(.68,0,.33,1) .1s,border-color .5s cubic-bezier(.55,.055,.675,.19);
+  }
+  
+  &:hover::after {
+      width: 100%;
   }
 }
   
@@ -94,11 +111,8 @@
       transition: width .3s cubic-bezier(.68,0,.33,1) .1s,border-color .5s cubic-bezier(.55,.055,.675,.19);
     }
     
-    &:hover{
-      
-      &::after {
+    &:hover::after {
         width: 100%;
-      }
     }
   }
 }
@@ -107,15 +121,14 @@
   display: none;
 }
 
-.social-link a {
-    color: inherit;
-  }
-  
   /*=======================================
   Media Queries             
   =======================================*/
   @media screen and (max-width:768px){
-    
+    .nav {
+      color: $text-dark-high;
+    }
+
     .burger {
       position: absolute;
       cursor: pointer;
@@ -183,15 +196,21 @@
     }
       
     .social-links {
+      width: 60%;
       opacity: 0;
-      height: 40%;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      justify-items: center;
+      display: flex;
+      justify-content: space-around;
       align-items: center;
-      font-size: 1.5em;
+      font-size: 2em;
       transform: scale(0);
       transition: all .75s cubic-bezier(.79,0,.24,1) 0s;
+      
+      a {
+      color: $text-dark-high;
+        &:hover, &:active, &:focus {
+        color: $primary;
+        } 
+      }
     }
 
     .nav.open {
