--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -46,7 +46,7 @@ h1 span {
 
 h2 {
   font-size: 3rem;
-  margin: 70px;
+  padding: 70px;
   text-align: center;
 }
 
@@ -401,28 +401,28 @@ strong {
 }
 
 .about {
-  z-index: 2;
+  z-index: 3;
   background: #1e1e1e;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: hidden;
+}
+
+.about h2 {
+  color: rgba(250, 250, 250, 0.85);
 }
 
 .about .wrapper {
   display: -ms-grid;
   display: grid;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 32px;
+  padding-bottom: 70px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.about .wrapper h2 {
-  color: rgba(250, 250, 250, 0.85);
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 
 .about .wrapper p {
