--- a/src/assets/styles/sections/_about.scss
+++ b/src/assets/styles/sections/_about.scss
@@ -1,18 +1,20 @@
 .about {
-  z-index: 2;
+  z-index: 3;
   background: $bg-dark;
   width: 100%;
-  display: flex;
-  overflow: hidden;
+  
+  h2 {
+    color: $text-light-high;
+  }
   
   .wrapper {
     display: grid;
-    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: $spacing*4;
+    padding-bottom: 70px;
     justify-content: center;
+    align-items: start;
 
-    h2 {
-      color: $text-light-high;
-    }
     p {
       color: $text-light-mid;
     }
