added modal, and render project content dynamicaly

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -264,7 +264,7 @@ strong {
   }
   .nav-menu {
     position: absolute;
-    height: 50vh;
+    height: 0;
     width: 100vw;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -404,6 +404,223 @@ strong {
   }
 }
 
+.carousel {
+  position: relative;
+  height: 73%;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.carousel__track {
+  position: relative;
+  height: 100%;
+  -webkit-transition: -webkit-transform 250ms ease-in;
+  transition: -webkit-transform 250ms ease-in;
+  transition: transform 250ms ease-in;
+  transition: transform 250ms ease-in, -webkit-transform 250ms ease-in;
+}
+
+.carousel__track-container {
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel__slide {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.carousel__image {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel__button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  font-size: 2rem;
+  background: transparent;
+  border: 0;
+  color: white;
+  cursor: pointer;
+}
+
+.carousel__button--left {
+  left: -40px;
+}
+
+.carousel__button--right {
+  right: -40px;
+}
+
+.carousel__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 20px 0;
+}
+
+.carousel__indicator {
+  border: 0;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.3);
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.carousel__indicator.current-slide {
+  background: rgba(255, 255, 255, 0.75);
+}
+
+.is-hidden {
+  display: none;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  padding: 16px;
+  z-index: 99;
+  background-color: rgba(30, 30, 30, 0.9);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: all 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: all 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.modal.active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.modal__project {
+  display: -ms-grid;
+  display: grid;
+  gap: 16px;
+}
+
+.modal__header {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__header h2 {
+  padding: 0;
+  color: rgba(250, 250, 250, 0.85);
+}
+
+.modal__project-title {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 8px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  color: rgba(250, 250, 250, 0.7);
+  text-align: center;
+}
+
+.modal__project-title fa-icon {
+  font-size: 1.5rem;
+}
+
+.modal__project-image {
+  border-radius: 30px;
+  border: 2px solid rgba(250, 250, 250, 0.7);
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-align: center;
+  height: 400px;
+  width: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.modal__project-stack {
+  position: absolute;
+  top: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.modal__project-stack li {
+  color: rgba(250, 250, 250, 0.4);
+  text-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  padding: 10px;
+  list-style: disc;
+  list-style-position: inside;
+}
+
+.modal__project-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.modal__project-details p {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 1rem;
+}
+
+.modal__project-details .fa-icon {
+  font-size: 2rem;
+}
+
+.modal__project-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
 .about {
   z-index: 3;
   background: #1e1e1e;
@@ -499,7 +716,8 @@ strong {
   background: url("../images/grey-bg.png");
   z-index: 5;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: 800px;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: min-content auto min-content;
@@ -742,7 +960,6 @@ strong {
 .work {
   z-index: 3;
   background: #1e1e1e;
-  height: 100vh;
   width: 100%;
 }
 
@@ -751,5 +968,121 @@ strong {
 }
 
 .work .wrapper {
-  padding-bottom: 86px;
+  padding: 0 16px 86px 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 32px;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+.project {
+  position: relative;
+  width: 300px;
+}
+
+.project .fa-icon {
+  font-size: 2rem;
+}
+
+.project h3 {
+  text-align: left;
+}
+
+.project__title {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 8px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  color: rgba(250, 250, 250, 0.7);
+  text-align: center;
+}
+
+.project__title fa-icon {
+  font-size: 1.5rem;
+}
+
+.project__image {
+  border-radius: 30px;
+  border: 2px solid rgba(250, 250, 250, 0.7);
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-align: center;
+  height: 400px;
+  width: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.project__stack-list {
+  position: absolute;
+  top: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.project__stack-list li {
+  color: rgba(250, 250, 250, 0.4);
+  text-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  padding: 10px;
+  list-style: disc;
+  list-style-position: inside;
+}
+
+.project__details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.project__details p {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 1rem;
+}
+
+.project__details .fa-icon {
+  font-size: 2rem;
+}
+
+.project__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
