--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,6 +4,8 @@
 
 @import './components/nav';
 @import './components/scrollarrow';
+@import './components/carousel';
+@import './components/modal';
 
 @import './sections/about';
 @import './sections/bio';
