--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -1,37 +1,40 @@
-.work {
-  z-index: 3;
-  background: $bg-dark;
+
+.modal {
+  position :fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
   width: 100%;
+  padding: $spacing*2;
   
+  z-index: 99;
+  background-color: rgba(30,30,30,0.9);
+  transform: translateX(-100%);
+  transition: all .5s cubic-bezier(.55,.055,.675,.19);  
+}
+
+.modal.active {
+  transform: translateX(0);
+}
+
+.modal__project {
+  display: grid;
+  gap: $spacing*2;
+}
+
+.modal__header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   h2 {
+    padding: 0;
     color: $text-light-high;
   }
-  
-  .wrapper {
-    padding: 0 $spacing*2 86px $spacing*2;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: $spacing*4;
-    grid-template-columns: repeat(2, 1fr);
-  }
 }
 
-.project {
-  position: relative;
-  width: 300px;
-
-  .fa-icon {
-    font-size: 2rem;
-  }
-
-  h3 { 
-    text-align: left;
-  }
-
-}
-
-.project__title {
+.modal__project-title {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -46,11 +49,10 @@
   }
 }
 
-.project__image {
+.modal__project-image {
   border-radius: 30px;
   border: 2px solid $text-light-mid;
   // background: $bg-light;
-  margin: 0 auto;
   box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
   overflow: hidden;
   
@@ -60,7 +62,7 @@
   object-fit: cover;
 }
 
-.project__stack-list {
+.modal__project-stack {
   position: absolute;
   top: 0px;
   display: flex;
@@ -76,7 +78,7 @@
   }
 }
   
-.project__details {
+.modal__project-details {
   display: flex;
   flex-direction: column;
   gap: $spacing;
@@ -93,14 +95,8 @@
   }
 }
 
-.project__links {
+.modal__project-links {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
 }
-
-
-
-
-
-
