--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -165,7 +165,7 @@
     
     .nav-menu {
       position: absolute;
-      height: 50vh;
+      height: 0;
       width: 100vw;
       display: flex;
       flex-direction: column;
