--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -3,100 +3,102 @@
   position :fixed;
   top: 0;
   left: 0;
+  text-align: center;
   height: 100vh;
   width: 100%;
-  padding: $spacing*2;
-  
+  overflow: auto;
   z-index: 99;
-  background-color: rgba(30,30,30,0.9);
-  transform: translateX(-100%);
-  transition: all .5s cubic-bezier(.55,.055,.675,.19);  
+  background: $bg-dark;
+  transform: translateY(100%);
+  transition: all .5s ease-in-out;  
 }
 
 .modal.active {
-  transform: translateX(0);
+  transform: translateY(0);
+}
+
+.modal__close {
+  border: none;
+  background: transparent;
+  color: $text-light-high;
+  font-size: 3rem;
+  padding: $spacing/2;
 }
 
 .modal__project {
   display: grid;
-  gap: $spacing*2;
+  justify-items: center;
+  gap: $spacing*4;
+  max-width: 1200px;
+  margin: auto;
 }
 
-.modal__header {
-  width: 100%;
+.modal__title {
+  color: $text-light-high;
+  padding: 0;
+}
+
+.modal__images {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  h2 {
-    padding: 0;
-    color: $text-light-high;
-  }
-}
-
-.modal__project-title {
+  justify-content: center;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: $spacing;
-  object-fit: cover;
-  color: $text-light-mid;
-  text-align: center;
-
-  fa-icon {
-    font-size: 1.5rem;
-  }
-}
-
-.modal__project-image {
-  border-radius: 30px;
-  border: 2px solid $text-light-mid;
-  // background: $bg-light;
-  box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
-  overflow: hidden;
+  overflow: auto;
   
-  text-align: center;
-  height: 400px;
-  width: 300px;
-  object-fit: cover;
+  .modal__image {
+    margin: 0 $spacing*2;
+    border-radius: 30px;
+    border: 2px solid $text-light-high;
+    height: 400px;
+  }
 }
 
-.modal__project-stack {
-  position: absolute;
-  top: 0px;
+.modal__links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  
+  .modal__link {
+    padding: $spacing;
+    font-size: 1rem;
+    font-weight: 600;
+    background: transparent;
+    border: 2px solid $primary;
+    color: $text-light-high;
+    width: 140px;
+    border-radius: 10px;
+    
+  }
+}
+
+.modal__stack-list {
+  padding: 0 $spacing*2;
   display: flex;
-  justify-content: flex-end;
   
   li {
-    color: $text-light-low;
-    text-shadow: 0px 0px 10px 5px rgba(0,0,0,0.5);
-    border-radius: 50%;
-    padding: 10px;
-    list-style: disc;
+    color: $primary;
+    font-weight: 600;
+    margin-right: $spacing;
+  }
+}
+
+.modal__description {
+  padding: 0 $spacing*2;
+  
+  p {
+    color: $text-light-mid;
+    font-size: 1rem;
+    margin-bottom: $spacing*2;
+  }
+}
+
+.modal__skill-list {
+  padding: 0 $spacing*2;
+  
+  
+  li {
+    list-style-type: disc;
+    padding: $spacing/2 0;
+    color: $text-light-mid;
     list-style-position: inside;
   }
-}
-  
-.modal__project-details {
-  display: flex;
-  flex-direction: column;
-  gap: $spacing;
-  align-items: center;
-  justify-content: space-between;
-
-  p {
-    color: $text-dark-low;
-    font-size: 1rem;
-  }
-
-  .fa-icon {
-    font-size: 2rem;
-  }
-}
-
-.modal__project-links {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
 }
