--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -490,135 +490,114 @@ strong {
   position: fixed;
   top: 0;
   left: 0;
+  text-align: center;
   height: 100vh;
   width: 100%;
-  padding: 16px;
+  overflow: auto;
   z-index: 99;
-  background-color: rgba(30, 30, 30, 0.9);
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  -webkit-transition: all 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: all 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  background: #1e1e1e;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
 }
 
 .modal.active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.modal__close {
+  border: none;
+  background: transparent;
+  color: rgba(250, 250, 250, 0.85);
+  font-size: 3rem;
+  padding: 4px;
 }
 
 .modal__project {
   display: -ms-grid;
   display: grid;
-  gap: 16px;
+  justify-items: center;
+  gap: 32px;
+  max-width: 1200px;
+  margin: auto;
 }
 
-.modal__header {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.modal__header h2 {
-  padding: 0;
+.modal__title {
   color: rgba(250, 250, 250, 0.85);
+  padding: 0;
 }
 
-.modal__project-title {
-  width: 100%;
+.modal__images {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 8px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  color: rgba(250, 250, 250, 0.7);
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  overflow: auto;
 }
 
-.modal__project-title fa-icon {
-  font-size: 1.5rem;
-}
-
-.modal__project-image {
+.modal__images .modal__image {
+  margin: 0 16px;
   border-radius: 30px;
-  border: 2px solid rgba(250, 250, 250, 0.7);
-  -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  text-align: center;
+  border: 2px solid rgba(250, 250, 250, 0.85);
   height: 400px;
-  width: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
-.modal__project-stack {
-  position: absolute;
-  top: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+.modal__links {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
-.modal__project-stack li {
-  color: rgba(250, 250, 250, 0.4);
-  text-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  padding: 10px;
-  list-style: disc;
-  list-style-position: inside;
-}
-
-.modal__project-details {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 8px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.modal__project-details p {
-  color: rgba(0, 0, 0, 0.4);
+.modal__links .modal__link {
+  padding: 8px;
   font-size: 1rem;
+  font-weight: 600;
+  background: transparent;
+  border: 2px solid #37CDDA;
+  color: rgba(250, 250, 250, 0.85);
+  width: 140px;
+  border-radius: 10px;
 }
 
-.modal__project-details .fa-icon {
-  font-size: 2rem;
-}
-
-.modal__project-links {
+.modal__stack-list {
+  padding: 0 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+}
+
+.modal__stack-list li {
+  color: #37CDDA;
+  font-weight: 600;
+  margin-right: 8px;
+}
+
+.modal__description {
+  padding: 0 16px;
+}
+
+.modal__description p {
+  color: rgba(250, 250, 250, 0.7);
+  font-size: 1rem;
+  margin-bottom: 16px;
+}
+
+.modal__skill-list {
+  padding: 0 16px;
+}
+
+.modal__skill-list li {
+  list-style-type: disc;
+  padding: 4px 0;
+  color: rgba(250, 250, 250, 0.7);
+  list-style-position: inside;
 }
 
 .about {
